--- a/radio.html
+++ b/radio.html
@@ -4,10 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<body style="margin:0;background:#000;height:100vh;">
-<audio id="r" src="https://streaming.fox.srv.br:8074/stream" autoplay style="display:none;"></audio>
-<script>
-document.getElementById("r").play().catch(()=>{});
-</script>
+<body style="margin:0;background:#000;">
+<audio controls autoplay src="https://streaming.fox.srv.br:8074/stream" style="width:100%;max-width:420px;margin:80px auto;display:block;"></audio>
 </body>
 </html>
